unpackaged/main/default/objects/fferpcore__ExchangeRateEntry__c/fferpcore__ExchangeRateEntry__c.object-meta.xml
<CustomObject>
    <customHelpPage>fferpcore__ExchangeRatesHelp</customHelpPage>
    <description>Stores the exchange rate details for a specific exchange rate group and type.</description>
    <label>Exchange Rate Entry</label>
    <nameField>
        <displayFormat>ER-{0000000000}</displayFormat>
        <label>Exchange Rate Entry ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exchange Rate Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>