unpackaged/main/default/objects/fferpcore__ExchangeRateEntry__c/fields/fferpcore__EndDate__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__EndDate__c</fullName>
    <description>The last date that the exchange rate is valid.</description>
    <inlineHelpText>The last date that the exchange rate is valid.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>