unpackaged/main/default/objects/fferpcore__ExchangeRateEntry__c/fields/fferpcore__ExchangeRateGroup__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ExchangeRateGroup__c</fullName>
    <description>The group that the exchange rate entry relates to.</description>
    <inlineHelpText>The group that the exchange rate entry relates to.</inlineHelpText>
    <label>Exchange Rate Group</label>
    <referenceTo>fferpcore__ExchangeRateGroup__c</referenceTo>
    <relationshipLabel>Exchange Rate Entries</relationshipLabel>
    <relationshipName>ExchangeRateEntries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>