unpackaged/main/default/objects/fferpcore__ExchangeRateEntry__c/fields/fferpcore__ExchangeRateType__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ExchangeRateType__c</fullName>
    <description>Exchange rate types for use with exchange rates in Foundations. We recommend that you do not delete the managed rate types. For more information, see the Foundations Help.</description>
    <inlineHelpText>Exchange rate types for use with exchange rates in Foundations. We recommend that you do not delete the managed rate types. For more information, see the Foundations Help.</inlineHelpText>
    <label>Exchange Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Spot</fullName>
                <default>true</default>
                <label>Spot</label>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Closing</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Translation</fullName>
            </value>
            <value>
                <fullName>Historical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>