unpackaged/main/default/objects/fferpcore__ExchangeRateEntry__c/fields/fferpcore__RelativeCurrency__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__RelativeCurrency__c</fullName>
    <description>The default currency for the related group.</description>
    <formula>TEXT(fferpcore__ExchangeRateGroup__r.fferpcore__DefaultCurrency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The default currency for the related group.</inlineHelpText>
    <label>Relative Currency</label>
    <type>Text</type>
</CustomField>