unpackaged/main/default/objects/fferpcore__ExchangeRateEntry__c/fields/fferpcore__StartDate__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__StartDate__c</fullName>
    <description>The first date that the exchange rate is valid.</description>
    <inlineHelpText>The first date that the exchange rate is valid.</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>