unpackaged/main/default/objects/fferpcore__ExchangeRateEntry__c/listViews/fferpcore__All.listView-meta.xml
<ListView>
    <fullName>fferpcore__All</fullName>
    <columns>NAME</columns>
    <columns>fferpcore__ExchangeRateGroup__c</columns>
    <columns>fferpcore__RelativeCurrency__c</columns>
    <columns>fferpcore__StartDate__c</columns>
    <columns>fferpcore__EndDate__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>